tests/tc/pos/union01.js

/*@ foo :: ((int|bool)) => (int|bool) */
function foo(x) {
  return x;
}

